apps/it-tools/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-ingress
  namespace: productivity
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`tools.${DOMAIN}`)
      kind: Rule
      services:
        - name: it-tools
          port: 8080
      middlewares:
        - name: authentik
          namespace: traefik
